--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -35,10 +35,9 @@ nav,
   display: none;
 }
 main {
-  padding: 2rem 2rem 3.5rem 2rem;
+  padding: 5rem 2rem 3.5rem 2rem;
   background: #111;
   color: #111;
-  border-bottom: 1px solid #000;
 }
 .content {
   max-width: 480px;
@@ -46,6 +45,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  
 }
 .content-group-one .intro-text {
   font-size: 0.85rem;
@@ -107,7 +107,8 @@ main {
   color: #ffffff;
 }
 .buttons .button.two:hover {
-  background: #e6e6e6;
+  background: #ffffff;
+  color:#111 ;
 }
 .plus-icon {
   display: inline-flex;
@@ -129,8 +130,9 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #111 50%, #ffffff 50%);
-  border-top: 1px solid #111;
+  background: linear-gradient(to bottom, #111 48%, #ffffff 52%);
+  padding-top: 20px;
+  margin-top: -1px;
 }
 .image-container img {
   max-width: 85%;
@@ -138,14 +140,12 @@ main {
   border-radius: 18px;
   display: block;
 }
-
 footer {
   background: #fff;
   padding: 2rem 0 1.5rem 0;
   position: fixed;
   left: 0;
   right: 0;
-
   width: 100vw;
   z-index: 100;
 }
@@ -161,7 +161,7 @@ footer {
 .brands p {
   color: #000000;
   font-size: 1.2rem;
-  padding: 0 1rem 1em 1rem;
+  padding: 0 1rem 0 1rem;
 }
 .logos {
   display: flex;
@@ -191,21 +191,19 @@ footer {
   width: 120px;
   height: 60px;
 }
-
-@media (min-width: 768px) and (min-height: 600px) {
+@media (min-width: 900px) {
   .header-container {
     gap: 1.5rem;
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
-    margin-bottom: #666 1px solid;
     max-width: 950px;
     margin: 0 auto;
     padding: 0 1rem;
   }
   main {
-    padding: 100px 0 140px 0;
-    height: 70%;
+    padding: 100px 0 50px 0;
+    min-height: 10vh;
   }
   .icon-left {
     display: flex;
@@ -259,7 +257,7 @@ footer {
   .content {
     flex-direction: row;
     gap: 8rem;
-    max-width: 900px;
+    max-width: 800px;
   }
   .content-group-one,
   .content-group-two {
@@ -280,12 +278,18 @@ footer {
     width: 100vw;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
+    min-height: 15vh;
+    max-height: 45vh;
+    padding: 1rem 0;
+    overflow: hidden;
   }
   .image-container img {
-    width: 700px;
-    max-width: 50%;
+    width: 900px;
+    max-width: 70%;
+    max-height: 40vh;
     margin: 0;
     display: block;
+    object-fit: contain;
   }
   .logos img {
     width: 120px;
@@ -300,5 +304,29 @@ footer {
   footer {
     bottom: 0;
     background-color: #ffffff;
+    padding-bottom: 4em;
+  }
+}
+@media (min-width: 900px) and (max-height: 799px) {
+  main {
+    padding: 60px 0 80px 0;
+  }
+  .image-container {
+    max-height: 20vh;
+    padding: 0.5rem 0;
+  }
+  .image-container img {
+    max-height: 18vh;
+  }
+  .content {
+    gap: 4rem;
+  }
+  .logos img {
+    width: 100px;
+    height: 50px;
+  }
+  .logo-container.Squarespace img {
+    width: 120px;
+    height: 50px;
   }
 }
