--- a/clima/week.css
+++ b/clima/week.css
@@ -14,18 +14,27 @@ body {
   margin: 0 auto;
   background: linear-gradient(180deg, #1e293b 0%, #0f172a 100%);
 }
-header,
-main {
+.top-section {
   background-color: #45b7d1;
+  margin: 0.5em 0.5em 0.5px 0.5em;
+  border-radius: 50px;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 1rem 1rem 2rem 1rem;
+  background: linear-gradient(
+    to bottom, 
+    #45b7d1 0%,     
+    #45b7d1 70%,    
+    rgba(69, 183, 209, 0.5) 100%  
+  );
 }
 header {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
-  padding: 1rem;
-  margin: 0.5em 0.5em -1px;
-  border-radius: 50px 50px 0 0;
+  margin-bottom: 20px;
 }
 .back-button {
   grid-column: 1;
@@ -64,26 +73,17 @@ header {
   align-items: center;
   gap: 0.5rem;
 }
+.location-title span {
+  font-size: 1.7rem;
+}
 main {
   flex: 1;
-  padding: 2rem;
-  margin: 0 0.5em 0.5em;
   border-radius: 0 0 50px 50px;
   position: relative;
-  z-index: 0;
+  
 }
 
-main::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 36px;
-  background: linear-gradient(180deg, rgba(69, 183, 209, 0) 0%, #0f172a 100%);
-  border-radius: 0 0 50px 50px;
-}
+
 .weather-icon {
   font-size: 6rem;
   line-height: 1;
